--- a/themes/aboutwilson/templates/base.html
+++ b/themes/aboutwilson/templates/base.html
@@ -41,7 +41,8 @@
 						<ul class="list-unstyled my-list-style">
                             <li><a href="{{ SITEURL }}"><i class="fa fa-book"></i> Home</a></li>
                             <li><a href="{{ SITEURL }}/tags.html"><i class="fa fa-tag"></i> Tags</a></li>
-							<li><a href="{{ SITEURL }}/feeds/rss.xml"><i class="fa fa-rss "></i> rss</a></li>
+                            <li><a href="{{ SITEURL }}/{{ FEED_ALL_RSS }}"><i class="fa fa-rss "></i> rss</a></li>
+                            <li><a href="{{ SITEURL }}/{{ FEED_ALL_ATOM }}"><i class="fa fa-rss"></i> atom</a></li>
 						</ul>
 					</div>
 					<div class="col-md-4">
