Fix tags and comments
* Add commas between tags for better visual separation.
* Add default twitter comment button, as well as a reddit button
* Enable disqus comments

--- a/themes/aboutwilson/templates/article.html
+++ b/themes/aboutwilson/templates/article.html
@@ -22,16 +22,23 @@
 	<div>
 		Tags:
 		{% for tag in article.tags %}
-		<span itemprop="keywords">
-			<a href="{{ SITEURL }}/{{ tag.url }}" rel="tag">{{ tag }}</a>
-		</span>
+        <span itemprop="keywords">
+            {% if loop.last %}
+            <a href="{{ SITEURL }}/{{ tag.url }}" rel="tag">{{ tag }}</a>
+            {% else %}
+            <a href="{{ SITEURL }}/{{ tag.url }}" rel="tag">{{ tag }}</a>,
+            {% endif %}
+        </span>
 		{% endfor %}
 	</div>
 	{% endif %}
 	<div itemprop="articleBody" class="article-body">{{ article.content }}</div>
 	<hr>
+    {% include 'twitter.html' %}<br />
+    {% include 'reddit.html' %}<br />
+    {% if DISQUS_SITENAME %}
 	<h2>Comments</h2>
-	{% include "twitter.html" %}
 	{% include 'disqus.html' %}
+    {% endif %}
 </div>
 {% endblock %}
