--- a/themes/aboutwilson/templates/base.html
+++ b/themes/aboutwilson/templates/base.html
@@ -40,7 +40,8 @@
 						<h4>Blog</h4>
 						<ul class="list-unstyled my-list-style">
                             <li><a href="{{ SITEURL }}"><i class="fa fa-book"></i> Home</a></li>
-                            <li><a href="{{ SITEURL }}/tags.html"><i class="fa fa-tag"></i> Tags</a></li>
+                            <li><a href="{{ SITEURL }}/tags.html"><i class="fa fa-tags"></i> Tags</a></li>
+                            <li><a href="{{ SITEURL }}/archives.html"><i class="fa fa-archive"></i> Archives</a></li>
                             <li><a href="{{ SITEURL }}/{{ FEED_ALL_RSS }}"><i class="fa fa-rss "></i> rss</a></li>
                             <li><a href="{{ SITEURL }}/{{ FEED_ALL_ATOM }}"><i class="fa fa-rss"></i> atom</a></li>
 						</ul>
