--- a/themes/aboutwilson/templates/base.html
+++ b/themes/aboutwilson/templates/base.html
@@ -70,7 +70,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-12 text-center center-block aw-bottom">
-			<p>&copy; {{ AUTHOR }} 2014</p>
+            <p>&copy; {{ AUTHOR }} {{ YEAR }}</p>
             <p>Powered by <a href="http://blog.getpelican.com/">Pelican</a>. Theme by <a href="http://blog.aboutwilson.net/">Wilson Freitas</a>.</p>
 		</div>
 	</div>
